tests/files/lexer_tests/should_fail/002.cmdr
// Illegal character in string (ascii 2)
var = '';